corrected minor spacing issue

--- a/Day-II-Calculator/calculator/src/components/ButtonComponents/Button.css
+++ b/Day-II-Calculator/calculator/src/components/ButtonComponents/Button.css
@@ -45,4 +45,5 @@
     margin: 0;
     font-size:2.5rem;
     font-weight: bold;
+    margin-bottom: -2px;
 }
